# plover-portuguese-grandjean

./: README.md  setup.cfg
portuguese_grandjean/: system.py
portuguese_grandjean/dictionaries/: dicionario-simplificado.json  user.json
