[metadata]
name = plover-portuguese-grandjean
version = 0.1
description = Portuguese Grandjean system for Plover
author = João Andrade
author_email = joaomontea@gmail.com
license = GNU General Public License v2 or later (GPLv2+)

keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages = portuguese_grandjean

[options.entry_points]
plover.system =
  Portuguese Grandjean = portuguese_grandjean.system